removed useless social links and added language toggler

--- a/index.html
+++ b/index.html
@@ -57,14 +57,17 @@
                         <li><a href="#"><span class="fa fa-clock-o"></span> Mon - Sat 9:00 - 19:00</a></li>
                     </ul>
                     <ul class="list-inline social_icon">
-                        <li><a href=""><span class="fa fa-facebook"></span></a></li>
+                        <!-- <li><a href=""><span class="fa fa-facebook"></span></a></li> -->
                         <li><a href=""><span class="fa fa-twitter"></span></a></li>
-                        <li><a href=""><span class="fa fa-behance"></span></a></li>
-                        <li><a href=""><span class="fa fa-dribbble"></span></a></li>
+                        <!-- <li><a href=""><span class="fa fa-behance"></span></a></li> -->
+                        <!-- <li><a href=""><span class="fa fa-dribbble"></span></a></li> -->
                         <li><a href=""><span class="fa fa-linkedin"></span></a></li>
-                        <li><a href=""><span class="fa fa-youtube"></span></a></li>
+                        <!-- <li><a href=""><span class="fa fa-youtube"></span></a></li> -->
+                        <li><span>|</span></li>
+                        <li><a href="#" data-toggle="tooltip" title="Toggle Language"><span class = "fa fa-globe"></span></a></li>
                     </ul>			
                 </div>
+
             </div><!-- Top Navbar end -->
 
             <!-- Navbar -->
@@ -769,10 +772,10 @@
                             <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem</p>
 
                             <ul class="list-inline footer_social_icon">
-                                <li><a href=""><span class="fa fa-facebook"></span></a></li>
+                                <!-- <li><a href=""><span class="fa fa-facebook"></span></a></li> -->
                                 <li><a href=""><span class="fa fa-twitter"></span></a></li>
-                                <li><a href=""><span class="fa fa-youtube"></span></a></li>
-                                <li><a href=""><span class="fa fa-google-plus"></span></a></li>
+                                <!-- <li><a href=""><span class="fa fa-youtube"></span></a></li> -->
+                                <!-- <li><a href=""><span class="fa fa-google-plus"></span></a></li> -->
                                 <li><a href=""><span class="fa fa-linkedin"></span></a></li>
                             </ul>
                         </div>
@@ -816,8 +819,8 @@
                 </div>
             </div><!-- Footer top end -->
 
-            <!-- Footer bottom -->
-            <div class="footer_bottom text-center">
+            <!-- Footer bottom
+           <div class="footer_bottom text-center">
                 <p class="wow fadeInRight">
                     Made with 
                     <i class="fa fa-heart"></i>
@@ -825,7 +828,8 @@
                     <a target="_blank" href="http://bootstrapthemes.co">Bootstrap Themes</a> 
                     2016. All Rights Reserved
                 </p>
-            </div><!-- Footer bottom end -->
+            </div>
+            Footer bottom end -->
         </footer><!-- Footer end -->
 
         <!-- JavaScript -->
